--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,86 @@
-body {
-  background: #dfe7ef;
-  font-family: "Bitter", serif;
+@media screen and (max-width: 768px) {
+  /* Styles for screens smaller than 768px */
 }
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  /* Styles for screens between 768px and 1024px */
+}
+
+@media screen and (min-width: 1024px) {
+  /* Styles for screens larger than 1024px */
+}
+html {
+  touch-action: manipulation;
+}
+
+body {
+  touch-action: manipulation;
+  -ms-content-zooming: none;
+  -ms-touch-action: manipulation;
+  zoom: reset;
+  max-height: 100vh;
+  max-width: 100vw;
+  overflow: hidden;
+}
+
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  body {
+    -ms-content-zooming: none;
+    -ms-touch-action: manipulation;
+  }
+}
+
+body {
+  background: url("https://raw.githubusercontent.com/R1SH4BH81/music.player/master/img/nzxt-gif.gif") center/200% no-repeat;
+    /* Set other background properties */
+    background-color: #000;
+    background-attachment: fixed;
+  position: relative;
+  font-family: "Bitter", serif;
+  overflow: hidden;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+    
+}
+ /* Set the secondary background image */
+ .backup-bg {
+  background-image: url("https://raw.githubusercontent.com/R1SH4BH81/music.player/master/img/bg2.png");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: #000;
+  background-attachment: fixed;
+}
+body:before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 75%;
+  height: 75%;
+  z-index: -1;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+
+.glow-effect {
+  display: inline-block;
+  padding: 10px;
+  background-color:#eef3f7 ;
+  transition: box-shadow 0.3s ease-in-out;
+}
+
+.glow-effect:hover {
+  box-shadow: 0 0 10px 5px rgba(128, 70, 228, 0.8);
+}
+
 
 * {
   box-sizing: border-box;
 }
+
 
 .icon {
   display: inline-block;
@@ -15,13 +90,52 @@ body {
   stroke: currentColor;
   fill: currentColor;
 }
+.small-input {
+  width: 250px;
+  height: 20px;
+  text-align: center;
+}
+.separator {
+  border-bottom: 3px grey;
+  width: 100%;
+  margin: 20px 0;
+  border-radius: 5px;
+}
+.sint {
+  padding: 10px;
+  border: 2px solid black;
+  border-radius: 5px;
+  font-size: 16px;
+  text-align: center;
+  background-color:#eef3f7
+}
+button {
+  background-color:#eef3f7;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  font-size: 16px;
+  cursor: pointer;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+button:hover {
+  background-color: #5674e1;
+}
+
+.sint:focus {
+  outline: none;
+  border-color: #6fbfff;
+  box-shadow: 0 0 8px #6fbfff;
+}
 
 .wrapper {
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
+  min-height: 106vh;
   background-size: cover;
 }
 @media screen and (max-width: 700px), (max-height: 500px) {
@@ -30,9 +144,25 @@ body {
     flex-direction: column;
   }
 }
+.progress__current {
+  background-color: #eef3f7;
+  animation: glowing 9s linear infinite;
+}
+
+@keyframes glowing {
+  0% {
+    box-shadow: 0 0 10px 2px rgb(0, 255, 0);
+  }
+  50% {
+    box-shadow: 0 0 10px 2px rgb(0, 255, 0);
+  }
+  100% {
+    box-shadow: 0 0 10px 2px rgb(0, 255, 0);
+  }
+}
 
 .player {
-  background: #eef3f7;
+  background: whitesmoke;
   width: 410px;
   min-height: 480px;
   box-shadow: 0px 15px 35px -5px rgba(50, 88, 130, 0.32);
@@ -182,7 +312,7 @@ body {
 }
 @media screen and (min-width: 500px) {
   .player-controls__item:hover {
-    color: #532ab9;
+    color: #4b1dbe;
   }
   .player-controls__item:hover::before {
     opacity: 1;
@@ -269,10 +399,17 @@ body {
 .progress__current {
   height: inherit;
   width: 0%;
-  background-color: #a3b3ce;
+  background-color: lightgray;
   border-radius: 10px;
 }
 
+.txt{
+  font-weight: 400;
+  font-size: 20px;
+  opacity: 0.7;
+  line-height: 1.3em;
+  min-height: 52px;
+}
 .album-info {
   color: #71829e;
   flex: 1;
@@ -292,13 +429,13 @@ body {
 }
 @media screen and (max-width: 576px), (max-height: 500px) {
   .album-info__name {
-    font-size: 18px;
+    font-size: 20px;
     margin-bottom: 9px;
   }
 }
 .album-info__track {
   font-weight: 400;
-  font-size: 20px;
+  font-size: 22px;
   opacity: 0.7;
   line-height: 1.3em;
   min-height: 52px;
@@ -326,7 +463,7 @@ body {
   transition: all 0.3s ease-in-out;
 }
 @media screen and (min-width: 500px) {
-  .github-btn:hover {
+  .github-btn:hover  {
     transform: scale(1.1);
     box-shadow: 0px 17px 20px -6px rgba(36, 52, 70, 0.36);
   }
@@ -385,3 +522,127 @@ body {
 }
 
 /*# sourceMappingURL=main.css.map */
+.container {
+  height: 25em;
+  width: 25em;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  left: 50%;
+  top: 50%;
+}
+input[type="checkbox"] {
+  appearance: none;
+  height: 9.37em;
+  width: 18.75em;
+  background-color: #3a3256;
+  position: absolute;
+  transform: translateX(-50%);
+  left: 50%;
+  top: 6.25em;
+  border-radius: 4.68em;
+}
+input[type="checkbox"]:before {
+  position: absolute;
+  content: "";
+  height: 8.12em;
+  width: 8.12em;
+  background-color: #7d7890;
+  border-radius: 50%;
+  top: 0.62em;
+  left: 0.62em;
+  transition: 0.3s;
+}
+label[for="light"] {
+  height: 6.25em;
+  width: 0.62em;
+  background-color: #31353d;
+  position: absolute;
+  top: 11em;
+  left: 8em;
+  z-index: -1;
+  transition: 0.3s;
+}
+label[for="light"]:after {
+  position: absolute;
+  content: "";
+  height: 0;
+  width: 0.75em;
+  border-bottom: 1.56em solid #392692;
+  border-left: 0.62em solid transparent;
+  border-right: 0.62em solid transparent;
+  top: 5.93em;
+  left: -0.68em;
+}
+input[type="checkbox"],
+label[for="light"] {
+  cursor: pointer;
+}
+input[type="checkbox"]:checked:before {
+  background-color: #f5f5f5;
+  left: 10em;
+  box-shadow: 0 0 8.75em 1.87em rgba(196, 241, 255, 0.8);
+}
+input[type="checkbox"]:checked + label {
+  top: 12em;
+}
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+  margin-right: 10px;
+}
+
+.switch input {
+  display: none;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+#status {
+  font-size: 24px;
+}
