--- a/css/main.scss
+++ b/css/main.scss
@@ -23,7 +23,7 @@ body {
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  // background: url(../img/bg.png) no-repeat center;
+  background: url(../img/bg.png) no-repeat center;
   background-size: cover;
   @media screen and (max-width: 700px), (max-height: 500px) {
     flex-wrap: wrap;
