--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,9 @@
 body {
-background: rgb(63,94,251);
-background: -moz-radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
-background: -webkit-radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
-background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#3f5efb",endColorstr="#fc466b",GradientType=1);
+background: rgb(43,163,37);
+background: -moz-linear-gradient(225deg, rgba(43,163,37,1) 0%, rgba(238,243,247,1) 100%);
+background: -webkit-linear-gradient(225deg, rgba(43,163,37,1) 0%, rgba(238,243,247,1) 100%);
+background: linear-gradient(225deg, rgba(43,163,37,1) 0%, rgba(238,243,247,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#2ba325",endColorstr="#eef3f7",GradientType=1);
 }
 * {
   box-sizing: border-box;
